--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -17,6 +17,7 @@ $colors: (
     "white": #FFFFFF,
     "cinnabar": #E93C2B,
     "brown": #473831,
+    "gold": #F8BA5D,
 );
 
 $color-folder: map-get($colors, "folder");
@@ -32,3 +33,4 @@ $color-black: map-get($colors, "black");
 $color-white: map-get($colors, "white");
 $color-cinnabar: map-get($colors, "cinnabar");
 $color-brown: map-get($colors, "brown");
+$color-gold: map-get($colors, "gold");
