fix: :bug: Fixing styles crashed by merged

--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -19,8 +19,8 @@ $colors: (
     "floral-white": #FFFAED,
     "saffron-mango": #F8BA5D,
     "buff": #F3CC86,
-    "cararra": #F8F8F5 "brown": #473831,
-    "gold": #F8BA5D,
+    "cararra": #F8F8F5,
+    "brown": #473831,
 );
 
 $color-folder: map-get($colors, "folder");
