Add Form to Layout

--- a/src/components/Enter-Site/Form.astro
+++ b/src/components/Enter-Site/Form.astro
@@ -1,8 +1,9 @@
 ---
 import ContinueText from "./ContinueText.astro";
+import DetectiveForm from "../DetectiveForm.astro";
 ---
 
 <div class="grid__form">
-  <img src="/assets/images/enter-site/form-image-placeholder.png" alt=" " />
+  <DetectiveForm />
   <ContinueText />
 </div><!-- Form -->
