--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -13,18 +13,18 @@
 
     @include transition(max-height, 0.3s, ease-in-out);
 
-    h2{
+    h2 {
       color: $color-red;
       font-family: 'Oswald';
       font-style: normal;
       font-weight: 700;
       font-size: 1.125rem;
-      line-height: 1.375rem;    
+      line-height: 1.375rem;
       text-transform: uppercase;
       margin-bottom: 1rem;
     }
 
-    h4{
+    h4 {
       font-family: 'Barlow';
       font-style: normal;
       font-weight: 600;
@@ -34,29 +34,31 @@
       margin-bottom: 1rem
     }
 
-    .item, .sub-item{
+    .item,
+    .sub-item {
       font-family: 'Barlow';
       font-style: normal;
       font-weight: 400;
       font-size: 1rem;
       line-height: 1.375rem;
-      color:$color-carbon;
+      color: $color-carbon;
     }
 
-    .item{
+    .item {
       margin-left: 27px;
     }
-    .sub-item{
+
+    .sub-item {
       margin-left: 49.6px;
     }
 
-    
+
     a {
       color: $color-red;
       font-weight: 600;
       text-decoration: underline;
     }
-    
+
     p {
       color: $color-black;
       //padding-bottom: 1rem;
@@ -72,7 +74,7 @@
       //margin-bottom: 1rem;
     }
 
-    h5{
+    h5 {
       font-family: 'Barlow';
       font-style: normal;
       font-weight: 600;
@@ -83,64 +85,65 @@
       margin-bottom: 1rem
     }
 
-    .acc-table{
+    .acc-table {
       display: flex;
       margin-bottom: 1rem;
 
-      p{
+      p {
         border-top: 1px solid $color-black;
-        
-        padding: 0;
         padding-right: .8125rem;
-      padding-left: .8125rem;
-      padding-top: 10px;
-      padding-bottom: 10px;
+        padding-left: .8125rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
         margin: 0;
       }
-      h3{
-        padding-top: 10px;
-        font-family: 'veneer';
+
+      h3 {
+        font-family: 'Oswald';
         text-align: center;
         font-weight: 400;
         font-size: 1.125rem;
         background: rgba(82, 108, 173, 0.3);
+        padding-top: .3125rem;
+        padding-bottom: .3125rem;
       }
 
-      .last-child{
-        border-right: 1px solid $color-black!important;
+      .last-child {
+        border-right: 1px solid $color-black !important;
       }
     }
 
-    .first-column{
+    .first-column {
       padding-bottom: 0;
       border: 1px solid $color-black;
       border-right: none;
 
-      p{
+      p {
         font-family: 'Oswald';
         font-style: normal;
         font-weight: 400;
         font-size: .875rem;
         line-height: 1.3125rem;
-        color:$color-black;
+        color: $color-black;
       }
-      
+
 
     }
-    .second-column{
-      width: 4rem;
+
+    .second-column {
+      width: 5rem;
       text-align: center;
       padding-bottom: 0;
       border: 1px solid $color-black;
       border-right: none;
 
-      p{
+      p {
         font-family: 'Barlow';
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
         line-height: 1.3125rem;
-        color:$color-black;
+        color: $color-black;
 
         display: flex;
         justify-content: center;
@@ -148,11 +151,11 @@
       }
     }
 
-    .acc-mobile-image{
+    .acc-mobile-image {
       max-width: 7.8125rem;
     }
 
-    small{
+    small {
       font-family: 'Barlow';
       font-style: normal;
       font-weight: 400;
@@ -165,7 +168,8 @@
   [aria-expanded="true"] {
     background: none;
     height: auto;
-    .accordion__item_title{
+
+    .accordion__item_title {
       color: $color-red;
     }
 
@@ -175,7 +179,7 @@
 
     .accordion__item_title::after {
       background-image: url('/assets/images/acc-minus.png');
-      transition: .5s; 
+      transition: .5s;
     }
   }
 
@@ -186,11 +190,11 @@
     border-bottom: 1px solid $color-black;
     padding-top: .9331rem;
     padding-right: 1.6875rem;
-    padding-left: 1.6875rem; 
+    padding-left: 1.6875rem;
   }
 
- 
-  
+
+
 
   &__item_title {
     color: $color-black;
@@ -207,7 +211,7 @@
     padding-left: .625rem;
     padding-right: .625rem;
 
-     &::after {
+    &::after {
       content: "";
       display: block;
       background-image: url('/assets/images/acc-plus.png');
@@ -217,15 +221,15 @@
       height: 34px;
       width: 34px;
       transition: .5s;
-    } 
+    }
 
 
   }
 
 }
 
-.accordion__item{
-  &:first-child{
-    border-top: 1px solid $color-black;   
+.accordion__item {
+  &:first-child {
+    border-top: 1px solid $color-black;
   }
 }
