--- a/src/styles/components/_accordions.scss
+++ b/src/styles/components/_accordions.scss
@@ -208,6 +208,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-transform: uppercase;
     padding-left: .625rem;
     padding-right: .625rem;
 
