--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -346,7 +346,7 @@ const internalNavLinks = [
       </div>
     </div>
   </section>
-  <section class="section alpd-academy__know-the-numbers">
+  <section class="alpd-academy__know-the-numbers">
     <div class="wrapper">
       <h1 class="know-the-numbers__title">know the numbers</h1>
     </div>
