--- a/src/styles/components/_internal-nav.scss
+++ b/src/styles/components/_internal-nav.scss
@@ -8,9 +8,10 @@
         width: 100%;
         z-index: 10;
 
-        background-image: url('/assets/images/header-bg-mobile.png');
-        background-repeat: no-repeat;
-        background-size: cover;
+        // background-image: url('/assets/images/header-bg-mobile.png');
+        // background-repeat: no-repeat;
+        // background-size: cover;
+        background-color: rgb(0 0 0 / 95%);
 
         @media screen and (max-width: 374px) {
             margin-top: -6px;
