--- a/src/components/Case-Files/PatientCaseFile.astro
+++ b/src/components/Case-Files/PatientCaseFile.astro
@@ -3,7 +3,7 @@ import Accordion from "../Accordion.astro";
 type Props = {
   id: string;
   name: string;
-  age: number;
+  age: number | string;
   gender: string;
   description: string;
   photo: string;
@@ -12,7 +12,7 @@ const { id, name, age, gender, description, photo } = Astro.props;
 const activeClass = Number(id) === 1 ? "active" : "";
 ---
 
-<div class="patients__case_files">
+<div class="patients__case_file_item mobile--only">
   <div class={`patient__case ${activeClass}`} id={`patient-id-${id}`}>
     <p class="patient__case_intro">{description}</p>
     <div class="patient__case_grid">
@@ -29,25 +29,27 @@ const activeClass = Number(id) === 1 ? "active" : "";
         <h4 class="patient__age" set:html={age} />
         <h4 class="patient__gender" set:html={gender} />
       </div>
-      <div class="accordion">
-        <Accordion header="medical history" id={`acc-medical-${id}`}>
-          <slot name="medical" />
-        </Accordion>
-        <Accordion header="family History" id={`acc-family-${id}`}>
-          <slot name="family" />
-        </Accordion>
-        <Accordion header="presenting symptoms" id={`acc-symptoms-${id}`}>
-          <slot name="symptoms" />
-        </Accordion>
-        <Accordion header="current medications" id={`acc-medications-${id}`}>
-          <slot name="medications" />
-        </Accordion>
-        <Accordion header="Lab results/Imaging" id={`acc-results-${id}`}>
-          <slot name="results" />
-        </Accordion>
-        <Accordion header="physician notes" id={`acc-notes-${id}`}>
-          <slot name="notes" />
-        </Accordion>
+      <div class="grid__accordions">
+        <div class="accordion">
+          <Accordion header="medical history" id={`acc-medical-${id}`}>
+            <slot name="medical" />
+          </Accordion>
+          <Accordion header="family History" id={`acc-family-${id}`}>
+            <slot name="family" />
+          </Accordion>
+          <Accordion header="presenting symptoms" id={`acc-symptoms-${id}`}>
+            <slot name="symptoms" />
+          </Accordion>
+          <Accordion header="current medications" id={`acc-medications-${id}`}>
+            <slot name="medications" />
+          </Accordion>
+          <Accordion header="Lab results/Imaging" id={`acc-results-${id}`}>
+            <slot name="results" />
+          </Accordion>
+          <Accordion header="physician notes" id={`acc-notes-${id}`}>
+            <slot name="notes" />
+          </Accordion>
+        </div>
       </div>
     </div>
   </div><!-- case-file -->
@@ -56,22 +58,29 @@ const activeClass = Number(id) === 1 ? "active" : "";
   .patients__case_files {
     background-color: white;
   }
+  .patient__case_grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, auto);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+
+    .grid_header {
+      grid-area: 1 / 1 / 2 / 2;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 1rem;
+    }
+  }
+  /* .div1 { grid-area: 1 / 1 / 2 / 2; }
+.div2 { grid-area: 1 / 2 / 2 / 3; }
+.div3 { grid-area: 1 / 3 / 2 / 4; } */
   .patient__case {
     display: none;
     &.active {
       display: block;
+      transition: display 2s ease-in-out;
     }
   }
 </style>
-<script>
-  // const patientSelect = document.getElementById("patient-dropdown");
-  // const patientCaseFiles = document.querySelectorAll(".patient__case");
-  // patientSelect?.addEventListener("change", (e: Event) => {
-  //   patientCaseFiles.forEach((patientCaseFile) => {
-  //     patientCaseFile?.classList.remove("active");
-  //   });
-  //   const selectedValue = (e.target as HTMLInputElement).value;
-  //   const patientCaseFile = document.querySelector(`#${selectedValue}`);
-  //   patientCaseFile?.classList.add("active");
-  // });
-</script>
